<resources>
    <string name="app_name">HostelMate</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_your_password"><u>Forget Your Password?</u></string>
    <string name="credit">Made with ❤️ by AND</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="PROFILE"><b>PROFILE</b></string>
    <string name="boldemail"><b>Email:</b></string>

    <string name="open_nav"><b>Open Navigation Drawer:</b></string>
    <string name="close_nav"><b>Close Navigation Drawer</b></string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_username">Enter Username</string>
    <string name="anushka_farooq"><b>ANUSHKA FAROOQ</b></string>
    <string name="block_a">BLOCK NO: A</string>
    <string name="room_no_203">ROOM NO: 203</string>
    <string name="anushka321_gmail_com">Anushka321@gmail.com</string>
    <string name="anushka737">Anushka737</string>
    <string name="_0330_1234567">0330-1234567</string>
    <string name="save">Save</string>
    <string name="current_room"><b>Current Block and Room No.</b></string>
    <string name="floor_no_1st">FLOOR NO: 1st</string>
    <string name="current_floor"><b>Current Floor</b></string>
    <string name="new_block_and_room_no"><b>New Block and Room No.</b></string>
    <string name="reason_for_change"><b>Reason For Change</b></string>
    <string name="write_your_reason">WRITE YOUR REASON</string>
    <string name="block_no"><b>BLOCK NO.</b></string>
    <string name="room_no"><b>ROOM NO.</b></string>
    <string name="phno"><b>Phno.</b></string>
    <string name="problem">Problem:</string>
    <string name="new_floor">New Floor</string>
    <string name="search">Search</string>
    <string name="floor">FLOOR NO.</string>
    <string name="capacity_4">CAPACITY: 2</string>
    <string name="type_4_person">TYPE: 4 person</string>
    <string name="price_rs_16_500">PRICE: RS. 16,500</string>
    <string name="title_activity_room_change_request">RoomChangeRequestActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="capacity">CAPACITY.</string>
    <string name="type_something">Type Something...</string>
    <string name="block_no1">Block No.</string>
    <string name="room_no1">Room No.</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnic">CNIC</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="email1">Email</string>
    <string name="floor_no">Floor No.</string>
    <string name="sign_up">Submit Request</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="enter_cnic">Enter CNIC</string>
    <string name="enter_age">Enter Age</string>
    <string name="father_cnic">Father\'s CNIC</string>
    <string name="enter_father_cnic">Enter Father\'s CNIC</string>
    <string name="enter_father_s_phone_no">Enter Father\'s Phone No</string>
    <string name="father_s_phone_number">Father\'s Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_preferred_room">Enter Your Preferred Room</string>
    <string name="no_of_beds">No of Beds</string>
    <string name="admission_request">Admission Request</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="bed_numbers_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="contact_details">Contact Details</string>
    <string name="name_anas">Anas Farooq</string>
    <string name="email_anas">anasfarooq@gmail.com</string>
    <string name="phone_anas">03240544338</string>
    <string name="name_daniyal">Daniyal Ahmed</string>
    <string name="email_daniyal">daniyal09shaikh@gmail.com</string>
    <string name="phone_daniyal">03403087051</string>
    <string name="our_location">Our Location</string>
    <string name="problem1">Problem</string>
    <string name="water_leakage">Water Leakage</string>
    <string name="enter_your_problem">Enter Your Problem</string>
    <string name="type_your_experience">Type your experience...</string>
    <string name="problem_description">Problem Description</string>
    <string name="upload_file">Upload File</string>
    <string name="no_file_chosen">No file chosen</string>
</resources>