<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_foreground"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="-35dp"
            android:background="@drawable/circled_background"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toEndOf="@id/profileImageView"
            app:layout_constraintTop_toBottomOf="@id/profileImageView"
            app:srcCompat="@drawable/camera" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_name"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent" />


                <EditText
                    android:id="@+id/Nametext"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="Anas Farooq"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/enter_password"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/passText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="12345678"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/enter_email"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent" />


                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/email1"
                    android:inputType="textEmailAddress"
                    android:text="anas@gmail.com"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/enter_cnic"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <EditText
                    android:id="@+id/cnic"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/cnic"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:text="3610468683255"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailText" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/enter_age"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:text="20"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cnic" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/PhoNo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:text="03240544338"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Age" />


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/enter_your_preferred_room"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <Spinner
                    android:id="@+id/NoBeds"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/no_of_beds"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Age" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"

                    android:text="@string/address"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/Address"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:text="Wah Cantt"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PhoNo" />


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/enter_father_cnic"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/father_cnic1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/father_cnic"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    android:text="3610468683255"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PhoNo" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/enter_father_s_phone_no"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/fatherPhno"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_fields"
                    android:hint="@string/father_s_phone_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    android:text="03240544338"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PhoNo" />

                <Button
                    android:id="@+id/submitRequest"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/filled_rounded_corner"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>